# DATE-WITH-AI-APP

./: .gitignore  README.md  pyproject.toml
docs/: agent-runbook.md  privacy-consent.md  product-spec.md
resonance/: __init__.py  analytics.py  api.py  models.py  service.py  storage.py
tests/: test_api.py  test_service.py
